--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -10,7 +10,9 @@
   <% @members[0..24].each do |member| %>
     <div class='member'>
       <h3><%= member.name %><h3>
-      <img src="<%= member.photo_url %>" alt="<%= member.name %>" height="200">
+      <% if member.photo_url.present? %>
+        <img src="<%= member.photo_url %>" alt="<%= member.name %>" height="200">
+      <% end %>
       <ul>
         <li>Allies: <%= member.allies.present? ? member.allies : 'None' %></li>
         <li>Enemies: <%= member.enemies.present? ? member.enemies : 'None'  %></li>
